grammar.js
      source_code: ($) => optional(seq($._statements, optional($._end_of_file))),
      _statements: ($) => prec.right(seq($._statement, optional($._statements))),

      // Comments
      line_comment: ($) => token(seq("//", /[^\r\n]*/)),
      comment: ($) => choice($.line_comment, $.block_comment),

      // Includes
      global_define_preprocessor_directive: ($) =>
        seq(token(prec(1, /&GLOBAL-DEFINE/i)), $.__define_preprocessor_body),
      scoped_define_preprocessor_directive: ($) =>
        seq(token(prec(1, /&SCOPED-DEFINE/i)), $.__define_preprocessor_body),
      __define_preprocessor_body: ($) =>
        seq(field("name", $.identifier), field("value", $.preprocessor_value)),
      if_preprocessor_directive: ($) => seq($.__if_preprocessor_directive_prefix, token(/&ENDIF/i)),
      __if_preprocessor_directive_prefix: ($) =>
        seq(
          token(/&IF/i),
          $.__if_preprocessor_condition_then,
          field("then_branch", $.__if_preprocessor_branch_values),
          optional($.__if_preprocessor_branches),
        ),
      message_preprocessor_directive: ($) =>
        seq(token(prec(1, /&MESSAGE/i)), field("value", $.preprocessor_value)),
      undefine_preprocessor_directive: ($) =>
        seq(token(prec(1, /&UNDEFINE/i)), field("name", $.identifier)),
      // AppBuilder region markers carry optional metadata on the same line.
      analyze_suspend_preprocessor_directive: ($) =>
        seq(
          token(prec(1, /&ANALYZE-SUSPEND/i)),
          optional(field("value", alias($._analyze_preprocessor_value, $.preprocessor_value))),
        ),
      analyze_resume_preprocessor_directive: ($) =>
        seq(
          token(prec(1, /&ANALYZE-RESUME/i)),
          optional(field("value", alias($._analyze_preprocessor_value, $.preprocessor_value))),
        ),
      _analyze_preprocessor_value: ($) => token.immediate(/[^\r\n]+(?:~[ \t]*\r?\n[^\r\n]+)*/),
      preprocessor_value: ($) => token(/[^\n]+(?:~\s*\n[^\n]+)*/),
      constant: ($) =>
        seq(
          $._macro_extra_start,
          choice($.identifier, $.number_literal, alias($._numeric_identifier, $.identifier)),
          optional(
            choice(
              seq(
                "=",
                field(
                  "value",
                  choice(
                    $.identifier,
                    $.string_literal,
                    $.number_literal,
                    alias($._signed_number_literal, $.number_literal),
                    alias(token(prec(1, /TRUE|FALSE|YES|NO/i)), $.boolean_literal),
                    alias($._macro_extra_default, $.preprocessor_value),
                  ),
                ),
              ),
              field("value", alias($._macro_extra_payload, $.preprocessor_value)),
            ),
          ),
          "}",
        ),

      // Constants
      number_literal: ($) => token(/([0-9]+(\.[0-9]+)?|\.[0-9]+)/),
      _signed_number_literal: ($) => token(/[+-]([0-9]+(\.[0-9]+)?|\.[0-9]+)/),
      boolean_literal: ($) => choice(kw("TRUE"), kw("FALSE"), kw("YES"), kw("NO")),
      _qualified_identifier: ($) =>
        choice(
          $.macro_concatenated_name,
          $.identifier,
          $.qualified_name,
          alias($._kw_procedure, $.identifier),
          alias($._kw_interface, $.identifier),
        ),
      // BUFFER and TABLE-HANDLE can be identifiers in assignments, receivers,
      // and unnamed arguments, as well as parameter and handle-type markers.
      // TODO: Support marker identifiers in ASSIGN and compound/parenthesized
      // expressions without broadening expression states; preserve assignment
      // boundaries such as ASSIGN x = Buffer y = 1.
      // oxlint-disable-next-line tree-sitter-optimize/shared-keyword-alias-choice-inline
      macro_concatenated_name: ($) => token(MACRO_CONCATENATED_NAME),

      assignment_operator: ($) => choice("=", "+=", "-=", "*=", "/="),
      _comparison_operator: ($) => choice("=", ...COMPARISON_OPERATORS),

      // Assignabless
      assignment_statement: ($) =>
        prec.right(seq($.__assignment_statement_body, $._no_error_terminator)),
      __assignment_statement_body: ($) =>
        seq(
          field("left", $._assignable),
          field("operator", $.assignment_operator),
          field("right", choice($._assignment_value, $._bare_marker_identifier)),
          optional($.widget_phrase),
        ),

      // oxlint-disable-next-line tree-sitter-optimize/single-use-shared-choice-inline
      unary_expression: ($) =>
        choice(
          prec("unary", seq($.__unary_sign, $._expression)),
          prec("not", seq($._kw_not, $._expression)),
        ),
      // oxlint-disable-next-line tree-sitter-optimize/single-use-choice
      __unary_sign: ($) => choice("+", "-"),
      binary_expression: ($) => binary_expression($, $._expression, $._comparison_operator),
      // _statement_expression excludes `=` from comparison operators to disambiguate
      // assignment vs equality at the statement level. Without this, `x = 5.` could
      // parse as either assignment_statement or expression_statement (equality check).
      // By excluding `=` here, expression_statement cannot match `x = 5.`, forcing it
      // to parse as assignment_statement.
      // oxlint-disable-next-line tree-sitter-optimize/single-use-shared-choice-inline, tree-sitter-optimize/shared-symbol-alias-choice-inline
      qualified_name: ($) => seq(field("left", $._qualified_name_left), $.__qualified_name_tail),
      __qualified_name_tail: ($) =>
        seq(
          $._namedot,
          field("right", alias($._identifier_immediate, $.identifier)),
          optional($.__qualified_name_tail),
        ),
      // oxlint-disable-next-line tree-sitter-optimize/single-use-shared-choice-inline, tree-sitter-optimize/shared-symbol-alias-choice-inline
      _qualified_name_left: ($) =>
        choice(
          $.macro_concatenated_name,
          $.identifier,
          $.preprocessor_name,
          alias($._kw_interface, $.identifier),
        ),

      array_access: ($) => seq($.__array_access_prefix, "]"),
      // oxlint-disable-next-line tree-sitter-optimize/single-use-field-choice-sequence
      __array_access_prefix: ($) =>
        seq(
          field("array", choice($._qualified_identifier, $.object_access, $.scoped_name)),
          "[",
          field("index", $._array_subscript),
        ),
      // oxlint-disable-next-line tree-sitter-optimize/single-use-shared-choice-inline
      arguments: ($) => seq($.__arguments_prefix, ")"),
      // oxlint-disable-next-line tree-sitter-optimize/single-use-sequence, tree-sitter-optimize/non-empty-tail-extraction
      __arguments_prefix: ($) => seq("(", optional($.argument), optional($.__arguments_comma_tail)),
      // COM calls use empty comma-delimited slots for omitted positional arguments.
      // oxlint-disable-next-line tree-sitter-optimize/tail-extraction
      argument: ($) =>
        seq(
          optional(prec.dynamic(1, field("direction", $._parameter_direction))),
          $.__argument_body,
        ),
      __argument_body: ($) =>
        seq(
          choice(
            seq(field("name", $._qualified_identifier), $.__argument_in_handle),
            seq(
              choice(
                seq(
                  choice($._kw_table, $._kw_buffer, $._kw_table_handle, $._kw_dataset_handle),
                  field(
                    "name",
                    choice(
                      $._qualified_identifier,
                      $.object_access,
                      $.function_call,
                      $.binary_expression,
                    ),
                  ),
                ),
                field(
                  "name",
                  choice(
                    $._expression,
                    alias($.__argument_generic_type, $.generic_type),
                    $._bare_marker_identifier,
                  ),
                ),
              ),
              optional($.__argument_in_handle),
            ),
          ),
          optional($.__argument_type_passing),
        ),
      // oxlint-disable-next-line tree-sitter-optimize/single-use-choice
      function_call: ($) =>
        seq(
          field(
            "function",
            choice(
              $._qualified_identifier,
              alias($.__symbolic_name, $.identifier),
              $.object_access,
              $.scoped_name,
              $.system_handle_identifier,
            ),
          ),
          $.arguments,
        ),

      identifier: ($) => token(/[_A-Za-z][A-Za-z0-9_\-&#%$!]*/),

      // Routine names accept initials and operators that remain illegal in data identifiers.
      // oxlint-disable-next-line tree-sitter-optimize/shared-symbol-alias-choice-inline
      __symbolic_name: ($) => token(/[!#$%][A-Za-z0-9_\-&#%$!]*/),

      _numeric_identifier: ($) => numeric_identifier(),

      _no_error_terminator: ($) => seq(optional($.__no_error), $._terminator),
      // oxlint-disable-next-line tree-sitter-optimize/inline-keyword-owner
