test/corpus/core/preprocessor.txt
================================================================================
PREPROCESSOR GLOBAL-DEFINE
================================================================================

&GLOBAL-DEFINE APP-NAME "demo"

--------------------------------------------------------------------------------

(source_code
  (global_define_preprocessor_directive
    name: (identifier)
    value: (preprocessor_value)))

================================================================================
PREPROCESSOR GLOBAL-DEFINE with path value
================================================================================

&GLOBAL-DEFINE ZM_INC /zmd/dev/INC/

--------------------------------------------------------------------------------

(source_code
  (global_define_preprocessor_directive
    name: (identifier)
    value: (preprocessor_value)))

================================================================================
PREPROCESSOR SCOPED-DEFINE
================================================================================

&SCOPED-DEFINE FLAG YES
&Scoped-define OPEN-QUERY-DEFAULT-FRAME OPEN QUERY DEFAULT-FRAME FOR EACH ITEM ~
      WHERE item.system_id = ipcItemSysid AND ~
item.item = ipcItem NO-LOCK.
&Scoped-define TABLES-IN-QUERY-DEFAULT-FRAME ITEM

--------------------------------------------------------------------------------

(source_code
  (scoped_define_preprocessor_directive
    name: (identifier)
    value: (preprocessor_value))
  (scoped_define_preprocessor_directive
    name: (identifier)
    value: (preprocessor_value))
  (scoped_define_preprocessor_directive
    name: (identifier)
    value: (preprocessor_value)))

================================================================================
PREPROCESSOR UNDEFINE
================================================================================

&UNDEFINE FLAG

--------------------------------------------------------------------------------

(source_code
  (undefine_preprocessor_directive
    name: (identifier)))

================================================================================
PREPROCESSOR MESSAGE
================================================================================

&MESSAGE "hello"

--------------------------------------------------------------------------------

(source_code
  (message_preprocessor_directive
    value: (preprocessor_value)))

================================================================================
PREPROCESSOR IF DIRECTIVES - single-line forms
================================================================================

&IF DEFINED (FLAG) EQ 0 &THEN
&IF TRUE
&THEN
&ELSEIF FALSE
&ELSE
&ENDIF

--------------------------------------------------------------------------------

(source_code
  (if_preprocessor_directive
    (if_branch
      condition: (binary_expression
        (function_call
          function: (identifier)
          (arguments
            (argument
              name: (identifier))))
        (number_literal))))
  (if_preprocessor_directive
    (then_branch))
  (if_preprocessor_directive
    (if_branch
      condition: (boolean_literal)))
  (if_preprocessor_directive
    (then_branch))
  (if_preprocessor_directive
    (elseif_branch
      condition: (boolean_literal)))
  (if_preprocessor_directive
    (else_branch))
  (if_preprocessor_directive
    (endif_branch)))

================================================================================
PREPROCESSOR IF DIRECTIVES - mixed with statements
================================================================================

&if DEFINED(is_Running) <> 0 &THEN
  DEFINE VARIABLE cParm AS CHARACTER.
&ELSE
  DEFINE INPUT PARAMETER cParm AS CHARACTER.
&ENDIF

--------------------------------------------------------------------------------

(source_code
  (if_preprocessor_directive
    (if_branch
      condition: (binary_expression
        (function_call
          function: (identifier)
          (arguments
            (argument
              name: (identifier))))
        (number_literal))))
  (if_preprocessor_directive
    (then_branch))
  (variable_definition
    name: (identifier)
    type: (identifier))
  (if_preprocessor_directive
    (else_branch))
  (parameter_definition
    name: (identifier)
    type: (identifier))
  (if_preprocessor_directive
    (endif_branch)))

================================================================================
PREPROCESSOR - macro alone on its line is an extra
================================================================================

DEFINE VARIABLE x AS INTEGER NO-UNDO.
{&FetchDyn}
ASSIGN x = 1.

--------------------------------------------------------------------------------

(source_code
  (variable_definition
    name: (identifier)
    type: (identifier)
    (no_undo))
  (constant (identifier))
  (assign_statement
    (assign_phrase
      (assign_pair
        left: (identifier)
        right: (number_literal)))))

================================================================================
PREPROCESSOR - name that starts with a macro
================================================================================

{&PREFIX}fmt6 = "ZZZZZZ9".

{&PREFIX}MEMOTEXT[1] = "x".

x = STRING({&PREFIX}TITLE, 'X(42)':U).

--------------------------------------------------------------------------------

(source_code
  (assignment_statement
    left: (macro_concatenated_name)
    operator: (assignment_operator)
    right: (string_literal))
  (assignment_statement
    left: (array_access
      array: (macro_concatenated_name)
      index: (number_literal))
    operator: (assignment_operator)
    right: (string_literal))
  (assignment_statement
    left: (identifier)
    operator: (assignment_operator)
    right: (function_call
      function: (identifier)
      (arguments
        (argument
          name: (macro_concatenated_name))
        (argument
          name: (string_literal))))))

================================================================================
PREPROCESSOR - macro name with the punctuation a name allows
================================================================================

{&PREFIX}W% = Translate("en %",-2,"").

IF {&PREFIX}field$ = 0 THEN z = 1.

--------------------------------------------------------------------------------

(source_code
  (assignment_statement
    left: (macro_concatenated_name)
    operator: (assignment_operator)
    right: (function_call
      function: (identifier)
      (arguments
        (argument
          name: (string_literal))
        (argument
          name: (unary_expression
            (number_literal)))
        (argument
          name: (string_literal)))))
  (if_statement
    (binary_expression
      (macro_concatenated_name)
      (number_literal))
    then: (assignment_statement
      left: (identifier)
      operator: (assignment_operator)
      right: (number_literal))))

================================================================================
PREPROCESSOR - AppBuilder ANALYZE-SUSPEND/ANALYZE-RESUME markers
================================================================================

&ANALYZE-SUSPEND _VERSION-NUMBER AB_v10r12 GUI
&ANALYZE-RESUME
&ANALYZE-SUSPEND _UIB-CODE-BLOCK _CUSTOM _DEFINITIONS C-Win
CREATE WIDGET-POOL.
&ANALYZE-RESUME

--------------------------------------------------------------------------------

(source_code
  (analyze_suspend_preprocessor_directive
    value: (preprocessor_value))
  (analyze_resume_preprocessor_directive)
  (analyze_suspend_preprocessor_directive
    value: (preprocessor_value))
  (create_statement)
  (analyze_resume_preprocessor_directive))

================================================================================
PREPROCESSOR - bare AppBuilder markers preserve following statements
================================================================================

&ANALYZE-SUSPEND
x = 1.
&ANALYZE-RESUME

y = 2.

--------------------------------------------------------------------------------

(source_code
  (analyze_suspend_preprocessor_directive)
  (assignment_statement
    left: (identifier)
    operator: (assignment_operator)
    right: (number_literal))
  (analyze_resume_preprocessor_directive)
  (assignment_statement
    left: (identifier)
    operator: (assignment_operator)
    right: (number_literal)))

================================================================================
PREPROCESSOR - AppBuilder metadata continuation and keyword case
================================================================================

&analyze-suspend _UIB-CODE-BLOCK ~
  _CUSTOM _DEFINITIONS C-Win
x = 1.
&analyze-resume

--------------------------------------------------------------------------------

(source_code
  (analyze_suspend_preprocessor_directive
    value: (preprocessor_value))
  (assignment_statement
    left: (identifier)
    operator: (assignment_operator)
    right: (number_literal))
  (analyze_resume_preprocessor_directive))

================================================================================
Preprocessor - consecutive macro extras preserve constant nodes
================================================================================

{&FIRST}
{&SECOND} // trailing comment

--------------------------------------------------------------------------------

(source_code
  (constant (identifier))
  (constant (identifier))
  (comment
    (line_comment)))
