test/corpus/statements/aggregate.txt
================================================================================
AGGREGATE
================================================================================

AGGREGATE iCount = COUNT(CustNum) FOR Customer.
AGGREGATE dTotal = TOTAL(Balance) iCount = COUNT(CustNum) FOR Customer.
AGGREGATE dAvg = AVERAGE(Amount) FOR Order WHERE Status = "A".
AGGREGATE iMax = MAXIMUM(Qty) iMin = MINIMUM(Qty) FOR OrderLine.

--------------------------------------------------------------------------------

(source_code
  (aggregate_statement
    target: (identifier)
    field: (identifier)
    table: (identifier))
  (aggregate_statement
    target: (identifier)
    field: (identifier)
    target: (identifier)
    field: (identifier)
    table: (identifier))
  (aggregate_statement
    target: (identifier)
    field: (identifier)
    table: (identifier)
    (where_phrase
      condition: (binary_expression
        (identifier)
        (string_literal))))
  (aggregate_statement
    target: (identifier)
    field: (identifier)
    target: (identifier)
    field: (identifier)
    table: (identifier)))

================================================================================
AGGREGATE with qualified field and compound WHERE
================================================================================

AGGREGATE dTotal = TOTAL(Customer.Balance) FOR Customer WHERE Country EQ "USA" AND City EQ "Los Angeles".

--------------------------------------------------------------------------------

(source_code
  (aggregate_statement
    target: (identifier)
    field: (qualified_name
      left: (identifier)
      right: (identifier))
    table: (identifier)
    (where_phrase
      condition: (binary_expression
        (binary_expression
          (identifier)
          (string_literal))
        (binary_expression
          (identifier)
          (string_literal))))))
